tests/functional/data/transpiler/common/errors/dim/dimorder_too_big_wrong_number_of_indecies.err
dimorder_too_big_wrong_number_of_indecies.cpp:3:37: error: [@dimOrder] wrong number of arguments
    3 | @kernel void hello_kern(mat89_f mat @dimOrder(1)) {
      |                                     ^
